[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "email-validator-ai-mcp"
version = "1.0.0"
description = "MEOK AI Labs — email-validator-ai-mcp"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{name = "MEOK AI Labs", email = "nicholas@meok.ai"}]
dependencies = ["mcp>=1.0.0", "dnspython>=2.3.0", ]
keywords = ["mcp", "ai", "meok", "email", "validator", "mcp/"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/CSOAI-ORG/email-validator-ai-mcp"
[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py"]
